--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -10,7 +10,7 @@ pipeline {
         stage ('Checkout') {
             steps {
                 sh 'echo passed'
-                git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
+               // git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
             }
         }
 
@@ -24,7 +24,7 @@ pipeline {
 
         stage('Static code ananlysis') {
             environment {
-                SONAR_URL = "http://34.201.116.83:9000"
+                SONAR_URL = "http://34.201.138.129:9000"
             }
             steps {
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')])
