--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -19,11 +19,12 @@ pipeline {
 
         stage('Static code ananlysis') {
             environment {
-                SONAR_URL = "http://34.201.138.129:9000"
+                SONAR_URL = "http://184.72.210.170:9000"
             }
             steps {
-                withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')])
+                withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
                 sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+                }
             }
         }
 
@@ -49,7 +50,7 @@ pipeline {
                 GIT_USERNAME = "rehan-007"
             }
             steps {
-                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')])
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
                 git config user.email "rehananwar.zuhaib@gmail.com"
                 git config user.name "Rehan"
@@ -59,6 +60,7 @@ pipeline {
                 git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                 git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                 '''
+                }
             }
         }
     }
